# FastPATH

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN-multi-slide-cache.md  README.md  benchmark_methods.py  initial_plan_for_web.md  pyproject.toml  run.bat  setup.bat  tips_for_web.md
docs/: git-worktree-guide.md
scripts/: bench_tiles.py  new-worktree.ps1  remove-worktree.ps1
src/fastpath/: __init__.py  __main__.py  config.py
src/fastpath/ai/: __init__.py  base.py  manager.py
src/fastpath/ai/plugins/: __init__.py  example.py
src/fastpath/core/: __init__.py  annotations.py  paths.py  project.py  slide.py  types.py
src/fastpath/plugins/: __init__.py  base.py  context.py  controller.py  executor.py  registry.py  types.py
src/fastpath/plugins/examples/: __init__.py  color_histogram.py  tissue_classifier.py  tissue_detector.py
src/fastpath/plugins/nulite/: __init__.py  fastvit.py  model.py  plugin.py  postprocessing.py
src/fastpath/preprocess/: __init__.py  __main__.py  backends.py  metadata.py  pyramid.py  tiler.py  worker.py
src/fastpath/ui/: __init__.py  annotations.py  app.py  models.py  navigator.py  paths.py  preprocess.py  project.py  providers.py  settings.py  slide.py
src/fastpath/ui/qml/: main.qml
src/fastpath/ui/qml/components/: AIPanel.qml  AnnotationFilterPanel.qml  AnnotationOverlay.qml  AnnotationPanel.qml  AnnotationTileLayer.qml  AnnotationTools.qml  CacheStatsOverlay.qml  FallbackTileLayer.qml  InteractionLayer.qml  LayerPanel.qml  NavigationPanel.qml  OverviewPanel.qml  PluginPanel.qml  PreprocessFileList.qml  PreprocessForm.qml  PreprocessProgress.qml  PreprocessResult.qml  PreprocessView.qml  RadialPalette.qml  SelectedAnnotationOverlay.qml  SlideInfoPanel.qml  SlideViewer.qml  TileLayer.qml  ViewControlsPanel.qml  qmldir
src/fastpath/ui/qml/style/: Theme.qml  ThemedButton.qml  ThemedComboBox.qml  ThemedGroupBox.qml  ThemedProgressBar.qml  ThemedTextField.qml  qmldir
src/fastpath_core/: Cargo.toml  pyproject.toml
src/fastpath_core/src/: bulk_preload.rs  cache.rs  decoder.rs  error.rs  format.rs  lib.rs  pack.rs  prefetch.rs  scheduler.rs  slide_pool.rs  test_utils.rs  tile_buffer.rs  tile_reader.rs
tests/: conftest.py  test_ai_plugins.py  test_annotation_provider.py  test_annotations.py  test_app_controller.py  test_backends.py  test_error_paths.py  test_navigator.py  test_nulite_plugin.py  test_plugin_routing.py  test_plugins.py  test_preprocess.py  test_rust_scheduler.py  test_slide_context_original.py  test_slide_manager.py  test_tile_image_provider.py
web/: CADDY_MIGRATION.md  Caddyfile  Caddyfile.dev  start-web.bat  start-web.ps1
web/client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/client/public/: sw.js
web/client/src/: App.tsx  api.ts  index.css  index.ts  types.ts
web/client/src/cache/: TileCache.ts
web/client/src/network/: LevelIndexParser.ts  LevelPackFetcher.ts  SlideIndexStore.ts  TileFetchQueue.ts  TileFetcher.ts  TileNetwork.ts
web/client/src/renderer/: TileTextureAtlas.ts  WebGPURenderer.ts
web/client/src/renderer/shaders/: tile.wgsl
web/client/src/scheduler/: CacheMissThreshold.ts  FallbackResolver.ts  LevelSelector.ts  PrefetchCalculator.ts  TileScheduler.ts  ViewportCalculator.ts
web/client/src/viewer/: FastPATHViewer.ts  InputHandler.ts  ViewerState.ts
web/client/src/workers/: DecodePool.ts  decode.worker.ts
web/server/: config.py  main.py  static_files.py
web/server/routes/: slides.py
web/tests/client/: level-index-parser.test.ts  level-selector.test.ts  prefetch-calculator.test.ts  tile-network.test.ts  viewport-calculator.test.ts
web/tests/e2e/: conftest.py  test_spa_serving.py
web/tests/server/: conftest.py  test_routes.py
